Added Division of Labour Section

--- a/Docs/D2/D2.tex
+++ b/Docs/D2/D2.tex
@@ -678,30 +678,45 @@ their purpose and relationship to other subsystems.
 \appendix
 \section{Division of Labour}
 \label{sec:division_of_labour}
-% Begin Section
-Include a Division of Labour sheet which indicates the contributions of each team member. This sheet must be signed by all team members.
-% End Section
+\begin{table}[H]
+    \centering
+    \caption{Division of Labour}
+    \begin{tabular}{|p{2.5cm}|p{2.5cm}|p{10.5cm}|}
+        \hline
+        \textbf{Section} & \textbf{Contributor(s)} & \textbf{Description}\\
+        \hline
+        \textbf{Introduction} & Christopher Vishnu & Completed and revised all sections\\
+        \hline
+        \textbf{Analysis Class Diagram} & Arkin Modi, Andrew Hum, Shengchen Zhou, Hongzhao Tan & Arkin made and revised the Analysis Class Diagram. Andrew, Shengchen and Hongzhao developed the classes and their categories.\\
+        \hline
+        \textbf{Architecture Design} & Andrew Hum & Completed and revised all sections.\\
+        \hline
+        \textbf{Class Responsibility Collaboration Cards} & Andrew Hum, Shengchen Zhou, Hongzhao Tan & Contributors all developed the CRC cards. Andrew and Hongzhao thoroughly revised the CRC cards in correspondence with the Analysis Class Diagram and the Architecture Design.\\
+        \hline
+    \end{tabular}
+\end{table}
 
-\newpage
-\section*{IMPORTANT NOTES}
-\begin{itemize}
-%	\item You do \underline{NOT} need to provide a text explanation of each diagram; the diagram should speak for itself
-	\item Please document any non-standard notations that you may have used
-	\begin{itemize}
-		\item \emph{Rule of Thumb}: if you feel there is any doubt surrounding the meaning of your notations, document them
-	\end{itemize}
-	\item Some diagrams may be difficult to fit into one page
-	\begin{itemize}
-		\item It is OK if the text is small but please ensure that it is readable when printed
-		\item If you need to break a diagram onto multiple pages, please adopt a system of doing so and thoroughly explain how it can be reconnected from one page to the next; if you are unsure about this, please ask about it
-	\end{itemize}
-	\item Please submit the latest version of Deliverable 1 with Deliverable 2
-	\begin{itemize}
-		\item It does not have to be a freshly printed version; the latest marked version is OK
-	\end{itemize}
-	\item If you do \underline{NOT} have a Division of Labour sheet, your deliverable will \underline{NOT} be marked
-\end{itemize}
+\vspace{2cm}
 
+\begin{table}[H]
+    \begin{tabular}{p{5cm}}
+    \\
+    \hline
+    Andrew Hum
+    \\\\\\\\
+    \hline
+    Arkin Modi
+    \\\\\\\\
+    \hline
+    Hongzhao Tan
+    \\\\\\\\
+    \hline
+    Christopher Vishnu
+    \\\\\\\\
+    \hline
+    Shengchen Zhou
+    \end{tabular}
+\end{table}
 
 \end{document}
 %------------------------------------------------------------------------------
